deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
spec:
  replicas: 3
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      nodeSelector:
        starget: worker 
      containers:
      - name: search-container
        image: quay.apps.ocp.komsco.co.kr/komsco/search:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: quay-registry-secret
