service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search
  namespace: app
spec:
  selector:
    app: search
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
